fix(app): fix width & scrollbar issues

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -7,6 +7,7 @@
 
 body {
   margin: 0;
+  overflow: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
